[DT-3602] fix auto open (#2933)