@@ -7,7 +7,6 @@ import static org.broadinstitute.consent.http.resources.Resource.CHAIRPERSON;
 import static org.broadinstitute.consent.http.resources.Resource.MEMBER;
 
 import com.google.common.annotations.VisibleForTesting;
-import com.google.common.collect.Streams;
 import com.google.gson.Gson;
 import com.google.inject.Inject;
 import freemarker.template.TemplateException;
@@ -19,13 +18,13 @@ import java.sql.SQLException;
 import java.text.SimpleDateFormat;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Optional;
 import java.util.Set;
 import java.util.function.Function;
 import java.util.stream.Collectors;
@@ -865,7 +864,7 @@ public class DarCollectionService implements ConsentLogger {
     }
 
     // Create elections and votes for auto-open DACs
-    createElectionsAndVotesForAutoOpenDacs(context.classification, context.latestDar);
+    createElectionsAndVotesForAutoOpenDacs(context.classification(), context.latestDar());
   }
 
   /** Sends notification messages for a new DAR collection. */
@@ -875,34 +874,40 @@ public class DarCollectionService implements ConsentLogger {
     if (context == null) {
       return;
     }
-    if (!context.latestDar.getRequiresSOApproval()
-        || context.latestDar.getApprovingSigningOfficialUserId() != null) {
+
+    DataAccessRequest latestDar = context.latestDar();
+    DacUserClassification classification = context.classification();
+    DarCollection darCollection = context.darCollection();
+    String researcherName = context.researcherName();
+    User researcher = context.researcher();
+
+    if (!latestDar.getRequiresSOApproval()
+        || latestDar.getApprovingSigningOfficialUserId() != null) {
       // Notify users for auto-open DACs
       notifyUsersForDacs(
-          context.classification.autoOpenUsers,
-          context.classification.autoOpenDacs,
-          context.classification.autoOpenDatasets,
-          context.latestDar,
-          context.darCollection,
-          context.researcherName,
+          classification.autoOpenUsers,
+          classification.autoOpenDacs,
+          classification.autoOpenDatasets,
+          latestDar,
+          darCollection,
+          researcherName,
           true);
 
       // Notify users for manual DACs
       notifyUsersForDacs(
-          context.classification.manualOpenUsers,
-          context.classification.manualOpenDacs,
-          context.classification.manualOpenDatasets,
-          context.latestDar,
-          context.darCollection,
-          context.researcherName,
+          classification.manualOpenUsers,
+          classification.manualOpenDacs,
+          classification.manualOpenDatasets,
+          latestDar,
+          darCollection,
+          researcherName,
           false);
     } else {
-      notifySpecificSigningOfficialOfApprovalNeeded(context.latestDar, context.researcher);
+      notifySpecificSigningOfficialOfApprovalNeeded(latestDar, researcher);
     }
 
     // Notify signing officials of DAR submission
-    notifySigningOfficialsOfDARSubmission(
-        context.latestDar, context.researcher, context.darCollection.getDarCode());
+    notifySigningOfficialsOfDARSubmission(latestDar, researcher, darCollection.getDarCode());
   }
 
   /** Helper method to retrieve the DAR collection context for processing. */
@@ -916,7 +921,7 @@ public class DarCollectionService implements ConsentLogger {
 
     // Get the most recent DAR and its associated users
     DataAccessRequest latestDar = darCollection.getMostRecentDar();
-    List<User> adminAndChairUsers = getDistinctAdminAndChairUsersForDAR(latestDar);
+    List<User> dacUsers = getDacUsersForDAR(latestDar);
 
     // Get researcher details
     User researcher = userDAO.findUserById(darCollection.getCreateUserId());
@@ -929,15 +934,16 @@ public class DarCollectionService implements ConsentLogger {
 
     // Classify DACs and users by automation rules
     DacUserClassification classification =
-        classifyDacsAndUsers(dacsForDar, datasetsForDar, adminAndChairUsers);
+        classifyDacsAndUsers(dacsForDar, datasetsForDar, dacUsers);
 
     return new DarCollectionContext(
         darCollection, latestDar, researcher, researcherName, classification);
   }
 
   /** Classifies DACs and users based on automation rules. */
-  private DacUserClassification classifyDacsAndUsers(
-      Collection<Dac> dacsForDar, List<Dataset> datasetsForDar, List<User> adminAndChairUsers) {
+  @VisibleForTesting
+  protected DacUserClassification classifyDacsAndUsers(
+      Collection<Dac> dacsForDar, List<Dataset> datasetsForDar, List<User> dacUsers) {
 
     Set<Integer> dacIds =
         datasetsForDar.stream().map(Dataset::getDacId).collect(Collectors.toSet());
@@ -945,102 +951,58 @@ public class DarCollectionService implements ConsentLogger {
     DacUserClassification result = new DacUserClassification();
 
     for (Integer dacId : dacIds) {
-      List<DACAutomationRule> dacRules = dacAutomationRuleService.findAllByDacId(dacId);
-      boolean autoOpen = hasAutoOpenRule(dacRules);
-      Integer autoOpenUserId = getAutoOpenRuleEnabledByUserId(dacId);
+      Optional<DACAutomationRule> autoOpenRule =
+          dacAutomationRuleService.findAllByDacId(dacId).stream()
+              .filter(
+                  r ->
+                      r.ruleType() == DACAutomationRuleType.AUTO_OPEN_DAR_FOR_ALL_MEMBERS
+                          && r.enabledByUserId() != null)
+              .findFirst();
 
-      Dac dac = findDac(dacsForDar, dacId);
-      Dataset dataset = findDataset(datasetsForDar, dacId);
-      // If the DAC requires SO approval the submission is not a progress report
-      if (autoOpen) {
-        addAutoOpen(result, dacId, autoOpenUserId, dac, dataset);
-        addUsers(result.autoOpenUsers, dacId, adminAndChairUsers, true);
+      Optional<Dac> dac = dacsForDar.stream().filter(d -> d.getDacId().equals(dacId)).findFirst();
+      List<Dataset> datasetsForDac =
+          datasetsForDar.stream().filter(ds -> ds.getDacId().equals(dacId)).toList();
+
+      if (autoOpenRule.isPresent()) {
+        dac.ifPresent(result.autoOpenDacs::add);
+        result.autoOpenDatasets.addAll(datasetsForDac);
+        result.autoOpenUserIds.put(dacId, autoOpenRule.get().enabledByUserId());
+        addUsers(result.autoOpenUsers, dacId, dacUsers, true);
       } else {
-        addManualOpen(result, dac, dataset);
-        addUsers(result.manualOpenUsers, dacId, adminAndChairUsers, false);
+        dac.ifPresent(result.manualOpenDacs::add);
+        result.manualOpenDatasets.addAll(datasetsForDac);
+        addUsers(result.manualOpenUsers, dacId, dacUsers, false);
       }
     }
 
     return result;
   }
 
-  /** Finds a DAC by its ID from a collection of DACs. */
-  private Dac findDac(Collection<Dac> dacs, Integer dacId) {
-    return dacs.stream().filter(d -> d.getDacId().equals(dacId)).findFirst().orElse(null);
-  }
-
-  /** Finds a dataset by its DAC ID from a list of datasets. */
-  private Dataset findDataset(List<Dataset> datasets, Integer dacId) {
-    return datasets.stream().filter(ds -> ds.getDacId().equals(dacId)).findFirst().orElse(null);
-  }
-
-  /** Checks if an auto-open rule exists for a given DAC ID. */
-  private boolean hasAutoOpenRule(List<DACAutomationRule> dacRules) {
-    return dacRules.stream()
-        .anyMatch(
-            r ->
-                r.ruleType() == DACAutomationRuleType.AUTO_OPEN_DAR_FOR_ALL_MEMBERS
-                    && r.enabledByUserId() != null);
-  }
-
-  /** Retrieves the user ID associated with the auto-open rule for a given DAC ID. */
-  private Integer getAutoOpenRuleEnabledByUserId(Integer dacId) {
-    return dacAutomationRuleService.findAllByDacId(dacId).stream()
-        .filter(
-            r ->
-                r.ruleType() == DACAutomationRuleType.AUTO_OPEN_DAR_FOR_ALL_MEMBERS
-                    && r.enabledByUserId() != null)
-        .map(DACAutomationRule::enabledByUserId)
-        .findFirst()
-        .orElse(null);
-  }
-
-  /** Adds DACs, datasets, and auto-open user IDs to the auto open classification. */
-  private void addAutoOpen(
-      DacUserClassification result,
-      Integer dacId,
-      Integer autoOpenUserId,
-      Dac dac,
-      Dataset dataset) {
-
-    if (dac != null) {
-      result.autoOpenDacs.add(dac);
-    }
-    if (dataset != null) {
-      result.autoOpenDatasets.add(dataset);
-    }
-    result.autoOpenUserIds.put(dacId, autoOpenUserId);
-  }
-
-  /** Adds DACs and datasets to the manual open classification. */
-  private void addManualOpen(DacUserClassification result, Dac dac, Dataset dataset) {
-
-    if (dac != null) {
-      result.manualOpenDacs.add(dac);
-    }
-    if (dataset != null) {
-      result.manualOpenDatasets.add(dataset);
-    }
-  }
-
   /** Adds users to the target set based on their DAC roles and the autoOpen flag. */
-  private void addUsers(Set<User> targetSet, Integer dacId, List<User> users, boolean autoOpen) {
+  @VisibleForTesting
+  protected void addUsers(Set<User> targetSet, Integer dacId, List<User> users, boolean autoOpen) {
 
     for (User user : users) {
       boolean isChair = user.verifyDACRole(CHAIRPERSON, dacId);
       boolean isMember = user.verifyDACRole(MEMBER, dacId);
-      boolean isAdmin = user.hasUserRole(ADMIN);
-
       if (autoOpen) {
-        if (isChair || isMember || isAdmin) {
+        if (isChair || isMember) {
           targetSet.add(user);
         }
       } else { // manual
-        if (isChair || isAdmin) {
+        if (isChair) {
           targetSet.add(user);
         }
       }
     }
+  }
+
+  /** Returns users from the set that hold a CHAIRPERSON or MEMBER role for the given DAC. */
+  @VisibleForTesting
+  protected Set<User> filterUsersForDac(Set<User> allUsers, Integer dacId) {
+    return allUsers.stream()
+        .filter(u -> u.verifyDACRole(CHAIRPERSON, dacId) || u.verifyDACRole(MEMBER, dacId))
+        .collect(Collectors.toSet());
   }
 
   /** Creates elections and votes for DACs with auto-open rules. */
@@ -1065,8 +1027,9 @@ public class DarCollectionService implements ConsentLogger {
             int rpElectionId =
                 dacAutomationRuleService.createOpenElectionForDAR(latestDar, dataset, RP);
 
-            createVotesForAllUsers(
-                classification.autoOpenUsers, dataAccessElectionId, rpElectionId, latestDar);
+            Integer dacId = dataset.getDacId();
+            Set<User> dacUsers = filterUsersForDac(classification.autoOpenUsers, dacId);
+            createVotesForAllUsers(dacUsers, dataAccessElectionId, rpElectionId, latestDar, dacId);
 
             return null;
           });
@@ -1102,12 +1065,16 @@ public class DarCollectionService implements ConsentLogger {
   /** Creates standard votes for all users for the given elections. */
   @VisibleForTesting
   protected void createVotesForAllUsers(
-      Set<User> users, int dataAccessElectionId, int rpElectionId, DataAccessRequest dar) {
+      Set<User> users,
+      int dataAccessElectionId,
+      int rpElectionId,
+      DataAccessRequest dar,
+      Integer dacId) {
 
     for (User user : users) {
       createStandardVotes(dataAccessElectionId, rpElectionId, user);
 
-      if (user.hasUserRole(UserRoles.CHAIRPERSON)) {
+      if (user.verifyDACRole(CHAIRPERSON, dacId)) {
         createChairpersonVotes(dataAccessElectionId, rpElectionId, user, dar);
       }
     }
@@ -1158,7 +1125,13 @@ public class DarCollectionService implements ConsentLogger {
                 dar.getReferenceId()));
   }
 
-  /** Notifies users for the given DACs and datasets. */
+  /**
+   * Notifies users for the given DACs and datasets.
+   *
+   * <p>When {@code isAutoOpen} is {@code true}, each user receives a single auto-open email; {@code
+   * dacs} and {@code datasets} are not consulted. When {@code false}, per-user DAC/dataset
+   * membership is resolved from {@code dacs} and {@code datasets} to build the email body.
+   */
   @VisibleForTesting
   protected void notifyUsersForDacs(
       Set<User> users,
@@ -1169,13 +1142,7 @@ public class DarCollectionService implements ConsentLogger {
       String researcherName,
       boolean isAutoOpen)
       throws IOException, TemplateException {
-    Map<String, List<String>> dacToDatasetsMap = new HashMap<>();
     for (User user : users) {
-      List<Dac> userDacs = getMatchingDacs(user, dacs);
-      for (Dac dac : userDacs) {
-        List<String> datasetIdentifiers = getMatchingDatasets(dac, new ArrayList<>(datasets));
-        dacToDatasetsMap.put(dac.getName(), datasetIdentifiers);
-      }
       if (isAutoOpen) {
         // Send election notification for auto-open DACs
         if (latestDar.getProgressReport()) {
@@ -1185,6 +1152,12 @@ public class DarCollectionService implements ConsentLogger {
         }
       } else {
         // Send manual notification for manual DACs
+        Map<String, List<String>> dacToDatasetsMap = new HashMap<>();
+        List<Dac> userDacs = getMatchingDacs(user, dacs);
+        for (Dac dac : userDacs) {
+          List<String> datasetIdentifiers = getMatchingDatasets(dac, new ArrayList<>(datasets));
+          dacToDatasetsMap.put(dac.getName(), datasetIdentifiers);
+        }
         if (latestDar.getProgressReport()) {
           sendNewProgressReportRequestEmail(
               user,
@@ -1327,24 +1300,17 @@ public class DarCollectionService implements ConsentLogger {
     }
   }
 
-  private List<User> getDistinctAdminAndChairUsersForDAR(DataAccessRequest dar) {
-    List<Integer> datasetIds = dar.getDatasetIds();
-    return getDistinctAdminAndChairUsersForDatasetIds(datasetIds);
+  private List<User> getDacUsersForDAR(DataAccessRequest dar) {
+    return getDacUsersForDatasetIds(dar.getDatasetIds());
   }
 
-  private List<User> getDistinctAdminAndChairUsersForDatasetIds(List<Integer> datasetIds) {
-    List<User> admins = userDAO.findUsersByRoleId(UserRoles.ADMIN.getRoleId());
-    Set<User> chairPersons =
+  private List<User> getDacUsersForDatasetIds(List<Integer> datasetIds) {
+    return new ArrayList<>(
         userDAO.findUsersForDatasetsByRole(
-            datasetIds, Collections.singletonList(UserRoles.CHAIRPERSON.getRoleId()));
-    // Ensure that admins/chairs are not double emailed
-    return Streams.concat(admins.stream(), chairPersons.stream()).distinct().toList();
+            datasetIds, List.of(UserRoles.CHAIRPERSON.getRoleId(), UserRoles.MEMBER.getRoleId())));
   }
 
   private List<Dac> getMatchingDacs(User user, Collection<Dac> dacsInDAR) {
-    if (user.hasUserRole(UserRoles.ADMIN)) {
-      return new ArrayList<>(dacsInDAR);
-    }
     List<Integer> dacIDs =
         user.getRoles().stream().map(UserRole::getDacId).filter(Objects::nonNull).toList();
     return dacsInDAR.stream().filter(dac -> dacIDs.contains(dac.getDacId())).toList();
@@ -1357,27 +1323,12 @@ public class DarCollectionService implements ConsentLogger {
         .toList();
   }
 
-  /** Helper class to hold context for processing a DAR collection. */
-  private static class DarCollectionContext {
-    final DarCollection darCollection;
-    final DataAccessRequest latestDar;
-    final User researcher;
-    final String researcherName;
-    final DacUserClassification classification;
-
-    DarCollectionContext(
-        DarCollection darCollection,
-        DataAccessRequest latestDar,
-        User researcher,
-        String researcherName,
-        DacUserClassification classification) {
-      this.darCollection = darCollection;
-      this.latestDar = latestDar;
-      this.researcher = researcher;
-      this.researcherName = researcherName;
-      this.classification = classification;
-    }
-  }
+  private record DarCollectionContext(
+      DarCollection darCollection,
+      DataAccessRequest latestDar,
+      User researcher,
+      String researcherName,
+      DacUserClassification classification) {}
 
   /** Helper class to hold classification results for DACs, users, and datasets. */
   @VisibleForTesting
